--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ regex = "1.8.3"
 either = { version = "1.8.1", features = ["serde"]}
 log = "0.4.18"
 rand = "0.8.5"
+libreauth = "0.16.0"
 
 [dev-dependencies]
 httpmock = "0.6"
