--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ anyhow = "1.0.42"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = [ "full" ] }
-tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.23.0", features = ["native-tls", "url"] }
 chrono = { version = "0.4.19", features = ["serde"] }
 futures = "0.3.16"
 typed-builder = "0.18.0"
