--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,10 @@ either = { version = "1.8.1", features = ["serde"]}
 log = "0.4.18"
 rand = "0.8.5"
 libreauth = "0.16.0"
+env_logger = "0.11.5"
 
 [dev-dependencies]
 httpmock = "0.6"
+
+[features]
+native-tls = ["tokio-tungstenite/native-tls"]
