--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4.18"
 rand = "0.8.5"
 libreauth = "0.16.0"
 env_logger = "0.11.5"
+async-stream = "0.3.6"
 
 [dev-dependencies]
 httpmock = "0.6"
